--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "20steps/bricks-installer",
     "description": "The official installer to create projects based on the Bricks platform by 20steps.",
     "keywords": ["bricks", "platform", "installer", "php"],
+    "homepage": "https://github.com/20steps/bricks-installer",
     "license": "MIT",
     "authors": [
         {
@@ -18,13 +19,13 @@
     },
     "require": {
         "php": ">=7.0.0",
-        "guzzlehttp/guzzle": "^5.3.1",
-        "symfony/console": "~2.6",
-        "symfony/filesystem": "~2.5",
+        "guzzlehttp/guzzle": "^6.0",
+        "symfony/console": "^3.0",
+        "symfony/filesystem": "^3",
         "raulfraile/distill": "~0.9,!=0.9.3,!=0.9.4"
     },
     "require-dev": {
-        "symfony/process": "~2.5"
+        "symfony/process": "^3.0"
     },
     "extra": {
         "branch-alias": {
