--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,17 @@
 language: php
-sudo: true
-
+sudo: required
+dist: trusty
+addons:
+  apt:
+    packages:
+    - mysql-server-5.6
+    - mysql-client-core-5.6
+    - mysql-client-5.6
+services:
+- mysql
+- mongodb
+- memcached
+- redis-server
 cache:
   directories:
     - $HOME/.composer/cache/files
@@ -9,7 +20,25 @@ matrix:
   fast_finish: true
   include:
     - php: 7.0
+      env:
+      - APCU_PECL_VERSION="apcu-5.1.7"
+      - APCU_BC_PECL_VERSION="apcu_bc-1.0.3"
+      - SYMFONY_ENV="test"
+      - SYMFONY_DEPRECATIONS_HELPER="weak"
+      - DATABASE_USERNAME="travis"
+      - DATABASE_PASSWORD=""
+      - BRICKS_COLOR="generic"
+      - BRICKS_STAGE="test"
     - php: 7.1
+      env:
+      - APCU_PECL_VERSION="apcu-5.1.7"
+      - APCU_BC_PECL_VERSION="apcu_bc-1.0.3"
+      - SYMFONY_ENV="test"
+      - SYMFONY_DEPRECATIONS_HELPER="weak"
+      - DATABASE_USERNAME="travis"
+      - DATABASE_PASSWORD=""
+      - BRICKS_COLOR="generic
+      - BRICKS_STAGE="test"
 
 before_install:
   - composer self-update
@@ -18,7 +47,23 @@ before_install:
   - chmod 755 box
 
 install:
-  - composer install
+  - if [[ $APCU_PECL_VERSION != '' ]]; then echo "yes\nno\n" | pecl install $APCU_PECL_VERSION
+    && sed -i 's/extension="apcu.so"//' ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+    ; fi
+  - if [[ $APCU_BC_PECL_VERSION != '' ]]; then pecl install $APCU_BC_PECL_VERSION &&
+    sed -i 's/extension="apc.so"//' ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+    ; fi
+  - if [[ $TRAVIS_PHP_VERSION != 'hhvm' ]]; then if [[ $APCU_PECL_VERSION != '' && $APCU_BC_PECL_VERSION
+    == '' ]]; then phpenv config-add etc/travis/apcu.ini ; elif [[ $APCU_BC_PECL_VERSION
+    != '' ]]; then phpenv config-add etc/travis/apcu_bc.ini ; fi ; if [[ $TESTS_ZEND_CACHE_REDIS_ENABLED
+    == 'true' ]]; then phpenv config-add app/config/etc/travis/redis.ini ; fi ; if [[
+    $TESTS_ZEND_CACHE_MEMCACHE_ENABLED == 'true' ]]; then phpenv config-add app/config/etc/travis/memcache.ini
+    ; fi ; if [[ $TESTS_ZEND_CACHE_MEMCACHED_ENABLED == 'true' ]]; then phpenv config-add
+    app/config/etc/travis/memcached.ini ; fi ; if [[ $TESTS_ZEND_CACHE_MONGODB_ENABLED
+    == 'true' ]]; then phpenv config-add app/config/etc/travis/mongo.ini ; fi ; if [[
+    $TESTS_ZEND_CACHE_XCACHE_ENABLED == 'true' ]]; then phpenv config-add app/config/etc/travis/xcache.ini
+    ; fi ; fi
+  - composer install --no-interaction
   - php box build
 
 script:
