--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ matrix:
     env:
     - APCU_PECL_VERSION="apcu-5.1.7"
     - APCU_BC_PECL_VERSION="apcu_bc-1.0.3"
-    - SYMFONY_ENV="test"
+    - SYMFONY_ENV="dev"
     - DATABASE_USERNAME="travis"
     - DATABASE_PASSWORD=""
     - BRICKS_COLOR="generic"
@@ -32,7 +32,7 @@ matrix:
     env:
     - APCU_PECL_VERSION="apcu-5.1.7"
     - APCU_BC_PECL_VERSION="apcu_bc-1.0.3"
-    - SYMFONY_ENV="test"
+    - SYMFONY_ENV="dev"
     - DATABASE_USERNAME="travis"
     - DATABASE_PASSWORD=""
     - BRICKS_COLOR="generic
